appId: com.theomesnil.WhatToWatch
---
- launchApp
- tapOn: 'Streaming, tab, 3 of 3'
- waitForAnimationToEnd
- takeScreenshot: 'maestro/screenshots/network/streaming'
- scroll
- takeScreenshot: 'maestro/screenshots/network/streaming2'
- tapOn:
    point: '18%,78%'
- takeScreenshot: 'maestro/screenshots/network/index'
- tapOn:
    point: '50%,31%'
- assertVisible: '2 seasons'
- tapOn:
    id: 'header-back-button'
- scroll
- takeScreenshot: 'maestro/screenshots/network/index2'
- tapOn:
    point: '50%,28%'
- assertVisible: '7 seasons'
